--- a/src/server/web/app/pom.xml
+++ b/src/server/web/app/pom.xml
@@ -150,10 +150,10 @@
 			<!-- Run the application using "mvn jetty:run" -->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
+				<artifactId>jetty-maven-plugin</artifactId>
 				<version>6.1.20</version>
 				<configuration>
-<!--					<webAppSourceDirectory>${basedir}/war</webAppSourceDirectory>-->
+                    <webAppSourceDirectory>${basedir}/war</webAppSourceDirectory>
 					<webAppConfig>
 						<contextPath>/geostore</contextPath>
 					</webAppConfig>
