Fixed build and integrated shibboleth module by default

--- a/src/server/modules/rest/pom.xml
+++ b/src/server/modules/rest/pom.xml
@@ -36,6 +36,7 @@
     <modules>
         <module>api</module>
         <module>impl</module>
+        <module>shibboleth</module>
         <module>client</module>
         <module>extjs</module>
         <module>test</module>
