--- a/src/server/web/app/src/main/webapp/WEB-INF/web.xml
+++ b/src/server/web/app/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
             classpath*:applicationContext.xml
+            classpath*:applicationContext-shibboleth.xml
         </param-value>
 	</context-param>
 
