--- a/src/server/web/app/pom.xml
+++ b/src/server/web/app/pom.xml
@@ -39,6 +39,11 @@
         	<groupId>it.geosolutions.geostore</groupId>
         	<artifactId>geostore-rest-impl</artifactId>
         </dependency>
+        
+        <dependency>
+        	<groupId>it.geosolutions.geostore</groupId>
+        	<artifactId>geostore-rest-shibboleth</artifactId>
+        </dependency>
 
 	</dependencies>
 	
@@ -150,10 +155,10 @@
 			<!-- Run the application using "mvn jetty:run" -->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
+				<artifactId>maven-jetty-plugin</artifactId>
 				<version>6.1.20</version>
 				<configuration>
-                    <webAppSourceDirectory>${basedir}/war</webAppSourceDirectory>
+					<!-- <webAppSourceDirectory>${basedir}/war</webAppSourceDirectory> -->
 					<webAppConfig>
 						<contextPath>/geostore</contextPath>
 					</webAppConfig>
