--- a/src/pom.xml
+++ b/src/pom.xml
@@ -174,6 +174,12 @@
                  </execution>
                </executions>
              </plugin>
+			 
+			 <plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.1.0</version>
+			</plugin>
 
         </plugins>
 		
