--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ jdk:
   - openjdk7
 before_script:
   - echo "MAVEN_OPTS='-Xmx512m -XX:MaxPermSize=256m'" > ~/.mavenrc
+after_success:
+  - mvn clean cobertura:cobertura coveralls:report
 script: sh travis-run-tests.sh
