--- a/src/pom.xml
+++ b/src/pom.xml
@@ -179,6 +179,9 @@
 				<groupId>org.eluder.coveralls</groupId>
 				<artifactId>coveralls-maven-plugin</artifactId>
 				<version>4.1.0</version>
+				<configuration>
+					<repoToken>BzDcPYAQdljgLiVLYsIC4OaZYepyRoAso</repoToken>
+				</configuration>
 			</plugin>
 			
 			<plugin>
