--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+	
     <groupId>it.geosolutions</groupId>
     <artifactId>geostore</artifactId>
     <version>1.4-SNAPSHOT</version>
@@ -22,7 +26,7 @@
         <name>GeoSolutions</name>
         <url>http://www.geo-solutions.it</url>
     </organization>
-
+	
     <developers>
         <developer>
           <id>etj</id>
