--- a/.gitignore
+++ b/.gitignore
@@ -15,26 +15,26 @@ catalog.xml
 .idea
 
 target
-server/core/model/target
-server/core/persistence/target
-server/core/target
-server/core/security/target
-server/core/services-api/target
-server/core/services-impl/target
-server/core/security/target
-server/modules/target
-server/modules/rest/api/target
-server/modules/rest/client/target
-server/modules/rest/extjs/target
-server/modules/rest/impl/target
-server/modules/rest/target
-server/modules/rest/test/target
-server/modules/rest/auditing/target/
-server/target
-server/web/app/target
-server/web/target
-server/core/security/target
+src/core/model/target
+src/core/persistence/target
+src/core/target
+src/core/security/target
+src/core/services-api/target
+src/core/services-impl/target
+src/core/security/target
+src/modules/target
+src/modules/rest/api/target
+src/modules/rest/client/target
+src/modules/rest/extjs/target
+src/modules/rest/impl/target
+src/modules/rest/target
+src/modules/rest/test/target
+src/modules/rest/auditing/target/
+src/target
+src/web/app/target
+src/web/target
+src/core/security/target
 
 #h2_disk database
-server/web/app/test.trace.db
-server/web/app/test.h2.db
+src/web/app/test.trace.db
+src/web/app/test.h2.db
